EVA-214 refactor: Se modifica los nombres de los botones para la pantalla completa, contraer y cerrar del calendario

--- a/Administracion/templates/Administracion/SalaJuntas/calendario.html
+++ b/Administracion/templates/Administracion/SalaJuntas/calendario.html
@@ -26,9 +26,9 @@
                         Reserva de la Sala de Juntas <span class="fw-300"><i>Calendario</i></span>
                     </h2>
                     <div class="panel-toolbar">
-                        <button class="btn btn-panel" data-action="panel-collapse" data-toggle="tooltip" data-offset="0,10" data-original-title="Collapse"></button>
-                        <button class="btn btn-panel" data-action="panel-fullscreen" data-toggle="tooltip" data-offset="0,10" data-original-title="Fullscreen"></button>
-                        <button class="btn btn-panel" data-action="panel-close" data-toggle="tooltip" data-offset="0,10" data-original-title="Close"></button>
+                        <button class="btn btn-panel" data-action="panel-collapse" data-toggle="tooltip" data-offset="0,10" data-original-title="Contraer"></button>
+                        <button class="btn btn-panel" data-action="panel-fullscreen" data-toggle="tooltip" data-offset="0,10" data-original-title="Pantalla completa"></button>
+                        <button class="btn btn-panel" data-action="panel-close" data-toggle="tooltip" data-offset="0,10" data-original-title="Cerrar"></button>
                     </div>
                 </div>
                 <div class="panel-container show">
