--- a/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
+++ b/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% if perms.GestionActividades.view_grupoactividades %}
+<li {% if menu_actual == 'Grupo Actividades' %} class="active" {% endif %}>
+    <a href="{% url 'GestionActividades:grupo-actividades-index' %}" title="Grupo Actividades" data-filter-tags="grupo actividades">
+        <i class="fal fa-calendar-alt"></i>
+        <span class="nav-link-text" data-i18n="nav.gestionactividades_grupo-actividades">Grupos Actividades</span>
+    </a>
+</li>
+{% endif%}
 
-</body>
-</html>
