--- a/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
+++ b/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
@@ -35,14 +35,14 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <input id="contrato_mostrar_id" style="display: none">
-                        <div class="col-md-12">
+                        <!--<input id="contrato_mostrar_id" style="display: none">-->
+                        <div id=contrato_mostrar_id style="display: none" class="col-md-12">
                             {% select_tag contratos 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=grupo_actividad.contrato_id invalido=errores.contrato mensaje_validacion='Por favor seleccione un contrato' %}
                         </div>
                     </div>
                     <div class="form-group">
-                        <input id="proceso_mostrar_id" style="display: none">
-                        <div class="col-md-12">
+                        <!--<input id="proceso_mostrar_id" style="display: none">-->
+                        <div id=proceso_mostrar_id style="display: none" class="col-md-12">
                             {% select_tag procesos 'proceso_id' 'Seleccione un proceso' texto_label="Proceso"  value=grupo_actividad.proceso_id invalido=errores.proceso mensaje_validacion='Por favor seleccione un proceso' %}
                         </div>
                     </div>
