EVA-214 refactor: Se quitaron los botones para contraer y cerrar el calendario en el template porque no son necesarios
También se cambia el nombre del encabezado del calendario por: "Calendario para la Reserva de la Sala de Juntas"

--- a/Administracion/templates/Administracion/SalaJuntas/calendario.html
+++ b/Administracion/templates/Administracion/SalaJuntas/calendario.html
@@ -23,12 +23,10 @@
             <div id="panel-1" class="panel">
                 <div class="panel-hdr">
                     <h2>
-                        Reserva de la Sala de Juntas <span class="fw-300"><i>Calendario</i></span>
+                        Calendario para la Reserva de la Sala de Juntas <span class="fw-300"></span>
                     </h2>
                     <div class="panel-toolbar">
-                        <button class="btn btn-panel" data-action="panel-collapse" data-toggle="tooltip" data-offset="0,10" data-original-title="Contraer"></button>
                         <button class="btn btn-panel" data-action="panel-fullscreen" data-toggle="tooltip" data-offset="0,10" data-original-title="Pantalla completa"></button>
-                        <button class="btn btn-panel" data-action="panel-close" data-toggle="tooltip" data-offset="0,10" data-original-title="Cerrar"></button>
                     </div>
                 </div>
                 <div class="panel-container show">
