--- a/GestionActividades/templates/GestionActividades/GrupoActividades/index.html
+++ b/GestionActividades/templates/GestionActividades/GrupoActividades/index.html
@@ -50,18 +50,15 @@
                                         </div>
                                         <div class="form-group">
                                             <div class="form-row">
-                                                <input id="contrato_id_select_id" style="display: none">
-                                                    <div class="col-md-4">
-                                                        {% select_tag contratos 'contratos_id' 'Seleccione un contrato' texto_label="Contrato" required="" value='' invalido='' mensaje_validacion='Por favor seleccione un contrato'%}
-                                                    </div>
-                                                <input id="colaborador_select_id" style="display: none">
-                                                    <div class="col-md-4">
-                                                        {% select_tag colaboradores 'colaboradores_id' 'Seleccione un colaborador' texto_label="colaborador" required="" value='' invalido='' mensaje_validacion='Por favor seleccione un colaborador'%}
-                                                    </div>
-                                                <input id="proceso_select_id" style="display: none">
-                                                    <div class="col-md-4">
-                                                        {% select_tag procesos 'procesos_id' 'Seleccione un proceso' texto_label="Proceso"  required="" value=lista_procesos invalido='' mensaje_validacion='Por favor seleccione un proceso' %}
-                                                    </div>
+                                                <div class="col-md-4">
+                                                    {% select_tag contratos 'contratos_id' 'Seleccione un contrato' texto_label="Contrato" required="" value='' invalido='' mensaje_validacion='Por favor seleccione un contrato'%}
+                                                </div>
+                                                <div class="col-md-4">
+                                                    {% select_tag colaboradores 'colaboradores_id' 'Seleccione un colaborador' texto_label="colaborador" required="" value='' invalido='' mensaje_validacion='Por favor seleccione un colaborador'%}
+                                                </div>
+                                                <div class="col-md-4">
+                                                    {% select_tag procesos 'procesos_id' 'Seleccione un proceso' texto_label="Proceso"  required="" value=lista_procesos invalido='' mensaje_validacion='Por favor seleccione un proceso' %}
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="row" id="js-contacts">
@@ -70,9 +67,9 @@
                                         {% endfor %}
                                         </div>
                                     </div>
-                                 {% include 'EVA/_common/_paginacion.html' %}
+                                 {% include 'EVA/_common/_paginacion.html' with datos=grupo_actividad%}
                                 </div>
-                                <div class="card-footer small text-muted">Actualizado: {{ fecha }}</div>
+                                <div class="card-footer small text-muted">Actualizado: {{fecha}} </div>
                             </div>
                         </div>
                     </div>
